--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,23 +3,24 @@
 *::after {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 
-  /* outline: 1px solid blue; */
+  outline: 1px solid blue;
 }
 
 body {
-  height: 100vh;
   overflow: hidden;
   background: url("../assets/images/decor.png") no-repeat center top / contain;
   background-color: var(--xmas-dark-red);
   color: var(--snow-white);
   gap: 2rem;
   position: relative;
-  margin: 8px;
-  padding-inline: 2rem;
+  /* padding-inline: 2rem; */
+  padding: 8px 8px 0px 8px;
   display: flex;
   flex-direction: column;
-  place-content: center;
+  justify-content: flex-start;
+  height: 100vh;
 }
 .app-container {
   /* height: calc(100% - 14rem); */
@@ -29,10 +30,10 @@ body {
   position: relative;
   height: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   flex-wrap: wrap;
-  margin: 1rem auto;
+
   gap: 1rem;
 }
 header {
@@ -48,7 +49,8 @@ header {
   border-radius: var(--border-radius-snow);
   box-shadow: var(--shadow-gift);
   height: 70px;
-  margin: 1.5rem;
+
+
 }
 h1 {
   font-family: var(--font-heading);
@@ -85,7 +87,6 @@ aside {
   border-radius: var(--border-radius-snow);
   height: 100%;
   width: min(300px, 25%);
-  height: 100%;
 }
 main {
   color: black;
@@ -94,11 +95,12 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-radius: var(--border-radius-snow);
+  border-radius: var(--border-radius-main);
   background-color: var(--snow-white);
   opacity: 0.9;
   box-shadow: var(--shadow-gift);
-  height: 100%;
+
+
 }
 footer {
   display: flex;
