--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -16,6 +16,7 @@
   --font-body: "Nunito", sans-serif;
 
   --border-radius-snow: 12px;
+  --border-radius-main: 12px 12px 0 0;
   --shadow-gift: 0 8px 32px 0 #0d2626;
   --shadow-hover: 0 8px 10px 0 #0d2626;
   --opacity-tiles: 0.9;
